<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.7"
            android:background="#131313"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/expressionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="#707070"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/resultTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0"
                android:textAlignment="textEnd"
                android:textColor="#EAEAEA"
                android:textSize="46sp" />

            <TextView
                android:id="@+id/errorsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:textColor="#7C2E2E"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#303030"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/buttonAc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="AC"
                        android:textColor="#8F8F8F"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/buttonDel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="DEL"
                        android:textColor="#8F8F8F"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/buttonPer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="%"
                        android:textColor="#8F8F8F"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <Button
                        android:id="@+id/button7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/button7Val"
                        android:textColor="#D3D3D3"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/button8"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/button8Val"
                        android:textColor="#D3D3D3"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/button5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/button5Val"
                        android:textColor="#D3D3D3"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/button9"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/button9Val"
                        android:textColor="#D3D3D3"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/button4Val"
                        android:textColor="#D3D3D3"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/button6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/button6Val"
                        android:textColor="#D3D3D3"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/button1Val"
                        android:textColor="#D3D3D3"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/button2Val"
                        android:textColor="#D3D3D3"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/button3Val"
                        android:textColor="#D3D3D3"
                        android:textSize="24sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <Button
                        android:id="@+id/buttonDec"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/buttonDecVal"
                        android:textColor="#D3D3D3"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/button0"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="@string/button0Val"
                        android:textColor="#D3D3D3"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/buttonParenth"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:text="( )"
                        android:textColor="#D3D3D3"
                        android:textSize="24sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="#3A3A3A"
                android:orientation="vertical"
                android:visibility="visible">

                <Button
                    android:id="@+id/buttonAdd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="+"
                    android:textColor="#D3D3D3"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/buttonSub"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="-"
                    android:textColor="#D3D3D3"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/buttonMul"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="*"
                    android:textColor="#D3D3D3"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/buttonDiv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="/"
                    android:textColor="#D3D3D3"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/buttonEq"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="@string/buttonEqVal"
                    android:textColor="#D3D3D3"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>